--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,135 @@
   background-color: white;
 }
 
-.title {
-  position: fixed;
-  top: 50px;
-  left: 50px;
+.menu-bar {
+  text-align: left;
   z-index: 1;
-  color: black;
+  color: white;
+  background-color: #2c2b2b;
+  padding: 10px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.menu-bar h2 {
+  font-size: 14px;
+  margin-left: 27px;
+  position: relative;
+  bottom: 25px;
+}
+
+.menu-bar nav {
+  margin-top: 35px;
+}
+
+.menu-bar nav a {
+  margin: 30px 20px;
+}
+
+.logo {
+  margin-left: 30px;
 }
 
 .globe-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-top: 200px;
-  border: 2px solid black;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 50px;
+}
+
+.data-container-left {
+  width: 300px;
+  min-height: 100px;
+  margin-top: 50px;
+  margin-right: 140px;
+  text-align: left;
+}
+
+.data-container-left div {
+  background-color: rgba(209, 191, 191, 0.493);
+  padding: 1px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.data-container-left p {
+  margin: 5px 10px;
+}
+
+.data-container-right {
+  width: 300px;
+  min-height: 00px;
+  margin-top: 50px;
+  margin-left: 140px;
+  text-align: left;
+}
+
+.data-container-right div {
+  background-color: rgba(209, 191, 191, 0.493);
+  padding: 1px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.data-container-right p {
+  margin: 5px 10px;
+}
+
+.data-container-right form {
+  text-align: center;
+  padding-bottom: 150px;
+}
+
+#data-header {
+  background-color: #2c2b2b;
+  border-bottom: 2px solid #dbcdcd;
+  color: white;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#text {
+  display: block;
+}
+
+#text h3 {
+  text-align: center;
+}
+
+#error {
+  text-align: center;
+  color: red;
+  position: relative;
+  bottom: 140px;
+}
+
+input {
+  width: 150px;
+  margin-left: 10px;
+}
+
+button {
+  position: relative;
+  bottom: 130px;
+  left: 220px;
 }
 /*# sourceMappingURL=App.css.map */
