--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
     background-color: rgb(255, 255, 255);
 
     a {
-        color: #FFFFFF;
+        color: #ffffff;
         text-decoration: none;
     }
 }
@@ -36,7 +36,6 @@
         a:hover {
             color: aqua;
         }
-
     }
 }
 
@@ -49,7 +48,6 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 50px;
-
 }
 
 .data-container-left {
@@ -66,7 +64,7 @@
         justify-content: space-between;
     }
 
-    p{
+    p {
         margin: 5px 10px;
     }
 }
@@ -85,7 +83,7 @@
         justify-content: space-between;
     }
 
-    p{
+    p {
         margin: 5px 10px;
     }
 
